<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Obregon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store_detail">StoreDetailActivity</string>
    <string name="textView_store_name_txt">Address</string>
    <string name="textView_store_schedule_txt">Schedule</string>
    <string name="textView_gallery_txt">Gallery</string>
    <string name="textView_phone_txt">Call</string>
    <string name="textView_website_txt">Website</string>
    <string name="textView_email_txt">Send Email</string>
    <string name="textView_store_actions_txt">Actions</string>
    <string name="title_activity_store_gallery">StoreGallery</string>
    <string name="textView_store_comments_txt">Comments</string>
    <string name="textView_comment_txt">Cupcake ipsum dolor sit amet candy canes powder. Macaroon chocolate halvah tart cake topping sesame snaps. I love dessert gummi bears tart dragée chocolate cake.</string>

</resources>
