<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"> 

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".StoreGallery" >
	    
	    <ImageView
	         android:id="@+id/imageView_store_image"
	         android:layout_width="match_parent"
	         android:layout_height="250dp"
	         android:layout_alignParentTop="true"
	         android:adjustViewBounds="true"
	         android:contentDescription="@string/textView_gallery_txt" />
	    

	     <TextView
	         android:id="@+id/textView_store_comments_title"
	         android:layout_width="match_parent"
	         android:layout_height="20dp"
	         android:layout_alignParentLeft="true"
	         android:layout_marginTop="10dp"
	         android:layout_marginLeft="10dp"
	         android:layout_marginRight="10dp"
	         android:text="@string/textView_store_comments_txt"
	         android:layout_below="@+id/imageView_store_image"
	         android:textSize="18sp" />
	     
	      <!-- Show comments -->
	    
	    <RelativeLayout
	        android:id="@+id/linearLayout_store_comments"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView_store_comments_title"
		    android:layout_margin="5dp"
		    android:padding="5dp" 
		    android:background="@drawable/border"
		    android:clickable="true" >
	
		   <ImageView
		       android:id="@+id/imageView_comments"
		       android:layout_width="0dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_toLeftOf="@+id/textView_comments_txt"
		       android:contentDescription="@string/textView_store_comments_txt"
		       android:src="@drawable/ic_button_comments" />
	
	        <TextView
	            android:id="@+id/textView_comments_txt"
	            android:layout_width="290dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="3dp"
	            android:textSize="12sp"
	            android:text="@string/textView_comment_txt"/>
	
		</RelativeLayout>
	     
	
	</RelativeLayout>

</ScrollView>