<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"> 

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:context=".StoreDetailActivity"
	    android:layout_marginBottom="10dp">
	
	  <!--   <ImageView
	        android:id="@+id/imageView_store_image"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:adjustViewBounds="true"
	        android:contentDescription="desc"
	        tools:ignore="HardcodedText" />--> 
	    
	    <TextView
	         android:id="@+id/textView_store_address_title"
	         android:layout_width="match_parent"
	         android:layout_height="20dp"
	         android:layout_alignParentLeft="true"
	         android:layout_marginTop="20dp"
	         android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	         android:text="@string/textView_store_name_txt"
	         android:textSize="18sp" />
	    
	    
	    <LinearLayout
	        android:id="@+id/linearLayout_store_directions"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="5dp"
	        android:padding="5dp"
	        android:layout_below="@+id/textView_store_address_title"
	        android:orientation="vertical"
	        android:background="@drawable/border" >
	           
	        <TextView
	            android:id="@+id/textView_store_address"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:textSize="14sp" />
	        
	    </LinearLayout>
	    
	     <TextView
	         android:id="@+id/textView_store_schedule_title"
	         android:layout_width="match_parent"
	         android:layout_height="20dp"
	         android:layout_alignParentLeft="true"
	         android:layout_marginTop="10dp"
	         android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	         android:text="@string/textView_store_schedule_txt"
	         android:layout_below="@+id/linearLayout_store_directions"
	         android:textSize="18sp" />
	    
	    
	    <LinearLayout
	        android:id="@+id/linearLayout_store_schedule"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="5dp"
	        android:padding="5dp"
	        android:layout_below="@+id/textView_store_schedule_title"
	        android:orientation="vertical"
	        android:background="@drawable/border" >
	           
	        <TextView
	            android:id="@+id/textView_store_schedule"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:padding="10dp" />
	        
	    </LinearLayout>
	 
	   <TextView
	         android:id="@+id/textView_store_actions_title"
	         android:layout_width="match_parent"
	         android:layout_height="20dp"
	         android:layout_alignParentLeft="true"
	         android:layout_marginTop="10dp"
	         android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	         android:text="@string/textView_store_actions_txt"
	         android:layout_below="@+id/linearLayout_store_schedule"
	         android:textSize="18sp" />
	    
	     <!-- Show gallery -->
	    
	    <RelativeLayout
	         android:id="@+id/linearLayout_store_gallery"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/textView_store_actions_title"
		    android:layout_margin="5dp"
		    android:padding="5dp" 
		    android:background="@drawable/button_selector"
		    android:clickable="true"
		    android:onClick="showGallery" >
	
		   <ImageView
		       android:id="@+id/imageView_gallery"
		       android:layout_width="0dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_toLeftOf="@+id/textView_gallery_txt"
		       android:contentDescription="@string/textView_gallery_txt"
		       android:src="@drawable/ic_button_picture" />
	
	        <TextView
	            android:id="@+id/textView_gallery_txt"
	            android:layout_width="210dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="3dp"
	            android:textSize="20sp"
	            android:text="@string/textView_gallery_txt"/>
	
		</RelativeLayout>
		
	     <!-- Call -->
	    
	    <RelativeLayout
	         android:id="@+id/linearLayout_store_phone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/linearLayout_store_gallery"
		    android:layout_margin="5dp"
		    android:padding="5dp" 
		    android:background="@drawable/button_selector"
		    android:clickable="true" 
		    android:onClick="makeCall">
	
		   <ImageView
		       android:id="@+id/imageView_phone"
		       android:layout_width="0dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_toLeftOf="@+id/textView_phone_txt"
		       android:contentDescription="@string/textView_phone_txt"
		       android:src="@drawable/ic_button_call" />
	
	        <TextView
	            android:id="@+id/textView_phone_txt"
	            android:layout_width="210dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="3dp"
	            android:textSize="20sp"
	            android:text="@string/textView_phone_txt"/>
	
		</RelativeLayout>   
		
	     <!-- Website-->
	     
	    <RelativeLayout
	         android:id="@+id/linearLayout_store_website"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/linearLayout_store_phone"
		    android:layout_margin="5dp"
		    android:padding="5dp" 
		    android:background="@drawable/button_selector"
		    android:clickable="true">
	
		   <ImageView
		       android:id="@+id/imageView_website"
		       android:layout_width="0dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_toLeftOf="@+id/textView_website_txt"
		       android:contentDescription="@string/textView_website_txt"
		       android:src="@drawable/ic_button_link" />
	
	        <TextView
	            android:id="@+id/textView_website_txt"
	            android:layout_width="210dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="3dp"
	            android:textSize="15sp"
	            android:text="@string/textView_website_txt"/>
	
		</RelativeLayout>   
		
	    <!-- Email -->
	    
	    <RelativeLayout
	         android:id="@+id/linearLayout_store_email"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/linearLayout_store_website"
		    android:layout_margin="5dp"
		    android:padding="5dp" 
		    android:background="@drawable/button_selector"
		    android:clickable="true">
	
		   <ImageView
		       android:id="@+id/imageView_email"
		       android:layout_width="0dp"
		       android:layout_height="wrap_content"
		       android:layout_alignParentLeft="true"
		       android:layout_toLeftOf="@+id/textView_email_txt"
		       android:contentDescription="@string/textView_email_txt"
		       android:src="@drawable/ic_button_email" />
	
	        <TextView
	            android:id="@+id/textView_email_txt"
	            android:layout_width="210dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:paddingTop="3dp"
	            android:textSize="15sp"
	            android:text="@string/textView_email_txt"/>
	
		</RelativeLayout> 
		
	</RelativeLayout>
</ScrollView>